# servcur

./: Cargo.toml  Dockerfile  docker-compose.yml  readme.md
docs/: readme.md
public/servcur/: .prettierrc  api-gen.cjs  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
public/servcur/src/: app.html
public/servcur/src/lib/: Action.svelte  Actions.svelte  AsyncLoad.svelte  ConsoleLine.svelte  ConsoleViewer.svelte  ContainerCard.svelte  ImageCard.svelte  Navigation.svelte  NetworkCard.svelte  NotImplemented.svelte  ProjectActions.svelte  ProjectCard.svelte  ProjectDockerfileActions.svelte  StackCard.svelte  VolumeCard.svelte  api.ts  routes.ts  util.ts
public/servcur/src/lib/models/: console.d.ts  projects.d.ts
public/servcur/src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
public/servcur/src/routes/containers/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
public/servcur/src/routes/dashboard/: +layout.ts  +page.svelte
public/servcur/src/routes/images/: +layout.svelte  +layout.ts  +page.svelte
src/: config.rs  main.rs  secret_store.rs  store.rs  util.rs
src/api/: docker_crud.rs  docker_log_ws.rs  error.rs  mod.rs  projects.rs  ws.rs
src/api/docker_crud/: container.rs  image.rs  mod.rs  network.rs  volume.rs
src/api/projects/: actions.rs  executor.rs  iohandle_ws.rs  mod.rs  project_management.rs  project_store.rs  routes.rs
src/api/projects/actions/: docker.rs  mod.rs
store/: store.json
test/build_logcontainer/: Dockerfile
test/logcontainer/: Dockerfile  main.py
test/webhook/: command.txt
(+117 files in other folders)
