[package]
name = "servcur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.0"
axum = { version = "0.7.4", features = ["ws", "http2", "multipart"] }
tower-http = { version = "0.5.1", features = ["full"] }
bollard = { git = "https://github.com/fussybeaver/bollard.git" }
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = [
    "sink",
    "std",
] }
hyper = { version = "1.1.0", features = ["full"] }
anyhow = { version = "1.0.80", features = ["backtrace"] }
